--- a/src/sass/af/question.scss
+++ b/src/sass/af/question.scss
@@ -165,6 +165,7 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
   @media #{$portrait-phone} {
     text-indent: 0;
     text-align: left;
+    padding-right: 1em;
   }
 
 }
