--- a/src/sass/af/sports.scss
+++ b/src/sass/af/sports.scss
@@ -111,7 +111,7 @@
   line-height: 1.5em;
   top: 0;
 
-  @include transition(all, .2s, ease-out);
+  transition: all .2s ease-out;
 
   h2{
     font-size: $fontSize-large;
@@ -235,7 +235,7 @@
 
   .AFInfoExpansible.mid{
     top: 50%;
-    transform: translate3d(0, -50%, 0);
+    transform: translateY(-50%);
   }
 
   >.inner{
@@ -374,10 +374,10 @@
   color: $dark-brown;
   transition: transform .2s ease-out;
   &:hover{
-    transform: translate3d(-1em, 0, 0);
+    transform: translateX(-1em);
   }
   &:active{
-    transform: translate3d(-0.7em, 0, 0);
+    transform: translateY(-0.7em);
   }
 }
 
@@ -404,10 +404,10 @@
 .AFPopBt{
   transition: transform .2s ease-out;
   &:hover{
-    transform: scale(1.02) translate3d(0, -0.3em, 0) !important;
+    transform: scale(1.02) translateY(-0.3em) !important;
   }
   &:active{
-    transform: scale(1.02) translate3d(0, 0em, 0) !important;
+    transform: scale(1.02) translateY(0em) !important;
   }
 }
 
