--- a/src/sass/selfie/selfie.scss
+++ b/src/sass/selfie/selfie.scss
@@ -54,6 +54,7 @@
 
 #SelfieApp {
   .alert-box {
+    position: relative;
     line-height: 3em;
     border: 1px solid rgba(0, 0, 0, 0.3);
     text-indent: 1em;
@@ -608,9 +609,10 @@ html:not(.touch) {
   background-size: 100% 100%;
 
   .alert-box{
-    text-align: center;
-    padding: 1em 0;
-    line-height: 1.3rem;
+    text-align: left;
+    text-indent: 0;
+    padding: .7em 0 1em .7em;
+    line-height: 1.2rem;
   }
 
   .sBt{
