--- a/src/sass/selfie/selfie.scss
+++ b/src/sass/selfie/selfie.scss
@@ -611,7 +611,7 @@ html:not(.touch) {
   .alert-box{
     text-align: left;
     text-indent: 0;
-    padding: .7em 0 1em .7em;
+    padding: 1em;
     line-height: 1.2rem;
   }
 
