--- a/src/sass/selfie/_sizes.scss
+++ b/src/sass/selfie/_sizes.scss
@@ -29,7 +29,7 @@ $portrait-tablet:
   "only screen
     and (min-width: 481px) and (max-width: 960px) and (orientation: landscape),
   only screen
-    and (min-width: 481px) and (max-width: 960px) and (max-aspect-ratio: 1/1)";
+    and (min-width: 481px) and (max-width: 960px) and (min-height: 800px) and (max-aspect-ratio: 1/1)";
 
 /* Smartphones  */
 
