--- a/src/sass/af/question.scss
+++ b/src/sass/af/question.scss
@@ -106,7 +106,7 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
     }
   }
   li:hover{
-    background-color: darken(rgb(240, 200, 0), 2%)
+    background-color: darken(rgb(240, 200, 0), 2%);
   }
   li.selected{
     background: rgba(246,133,53,1);
