--- a/src/sass/app/_sizes.scss
+++ b/src/sass/app/_sizes.scss
@@ -1,12 +1,3 @@
-/* Smartphones (portrait and landscape) ----------- */
-%phoneHtmlStyle {
-  font-size: 13px;
-}
-
-%tabletHtmlStyle{
-  font-size: 15px;
-}
-
 $portrait-phone:
   "only screen
     and (max-aspect-ratio: 8/10),
@@ -31,66 +22,32 @@ $portrait-tablet:
   only screen
     and (min-width: 481px) and (max-width: 960px) and (min-height: 800px) and (max-aspect-ratio: 1/1)";
 
-/* Smartphones  */
-
-@media #{$portrait-phone} {
-    html{
-      @extend %phoneHtmlStyle;
-    }
-  }
-
-@media #{$landscape-phone} {
+@media only screen and (max-width: 560px), only screen and (max-device-width: 560px) {
   html{
-    @extend %phoneHtmlStyle;
-  }
-
-  #Main{
-    visibility: hidden  !important;
-  }
-
-  #App {
-    background: url(#{$basePath}img/rotate-phone.png) center no-repeat;
-    background-size: 60%;
+    font-size: 13px;
   }
 }
 
-/* tablets */
-
-@media #{$landscape-tablet} {
+@media only screen and (min-width: 561px), only screen and (min-device-width: 561px) {
   html{
-    @extend %tabletHtmlStyle;
+    font-size: 14px;
   }
 }
 
-@media #{$portrait-tablet} {
-  html {
-    @extend %tabletHtmlStyle;
-  }
-
-  #Main {
-    visibility: hidden  !important;
-  }
-  #App {
-    background: url(#{$basePath}img/rotate-tablet.png) center no-repeat;
-    background-size: 60%;
+@media only screen and (min-width: 800px), only screen and (min-device-width: 800px) {
+  html{
+    font-size: 15px;
   }
 }
 
-/* Desktops and laptops ----------- */
 @media only screen and (min-width: 1224px) {
-  html {
+  html{
     font-size: 17px;
   }
 }
 
-/* Large screens ----------- */
 @media only screen and (min-width: 1500px) {
   html {
     font-size: 18px;
   }
-}
-
-/* iPhone 4 ----------- */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-
 }
