--- a/src/sass/selfie/_sizes.scss
+++ b/src/sass/selfie/_sizes.scss
@@ -1,79 +1,53 @@
-/* Smartphones (portrait and landscape) ----------- */
-%phoneHtmlStyle {
-  font-size: 13px;
-}
-
-%tabletHtmlStyle{
-  font-size: 15px;
-}
-
 $portrait-phone:
-  "only screen
+"only screen
     and (max-aspect-ratio: 8/10),
   only screen
     and (max-width: 480px) and (orientation: portrait)";
 
 $landscape-phone:
-  "only screen
+"only screen
     and (min-aspect-ratio: 81/100) and (max-height: 480px) and (max-width: 800px),
   only screen
     and (max-width: 480px) and (orientation: landscape)";
 
 $landscape-tablet:
-  "only screen
+"only screen
     and (min-width: 960px) and (orientation: portrait),
   only screen
     and (min-height: 481px) and (min-aspect-ratio: 1/1)";
 
 $portrait-tablet:
-  "only screen
+"only screen
     and (min-width: 481px) and (max-width: 960px) and (min-height: 800px) and (orientation: landscape),
   only screen
     and (min-width: 481px) and (max-width: 960px) and (min-height: 800px) and (max-aspect-ratio: 1/1)";
 
-/* Smartphones  */
-
-@media #{$portrait-phone} {
+@media only screen and (max-width: 560px), only screen and (max-device-width: 560px) {
   html{
-    @extend %phoneHtmlStyle;
+    font-size: 13px;
   }
 }
 
-@media #{$landscape-phone} {
+@media only screen and (min-width: 561px), only screen and (min-device-width: 561px) {
   html{
-    @extend %phoneHtmlStyle;
+    font-size: 14px;
   }
 }
 
-/* tablets */
-
-@media #{$landscape-tablet} {
+@media only screen and (min-width: 800px), only screen and (min-device-width: 800px) {
   html{
-    @extend %tabletHtmlStyle;
+    font-size: 15px;
   }
 }
 
-@media #{$portrait-tablet} {
-  html {
-    @extend %tabletHtmlStyle;
-  }
-}
-
-/* Desktops and laptops ----------- */
 @media only screen and (min-width: 1224px) {
-  html {
+  html{
     font-size: 17px;
   }
 }
 
-/* Large screens ----------- */
 @media only screen and (min-width: 1500px) {
   html {
     font-size: 18px;
   }
-}
-
-/* iPhone 4 ----------- */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-
 }
